docstheme/docstheme.css
/* #region Basic colors/sizing */
body {
	background: var(--bg);
	color: var(--text);
	font-family: var(--title-font), "Helvetica Neue", HelveticaNeue, Arial, sans-serif;
	font-weight: var(--title-font-weight);
	display: grid;
	grid-template-columns: minmax(17em, 1fr) 1fr 1fr;
	column-gap: 0.5em;
}
a { color: var(--accent) }
/* Accessibility */
.hidden {
	position: fixed;
	top: -10vh;
	left: 0;
	font-size: 1vh;
	line-height: 1;
}
button { cursor: pointer }
.tmblr-iframe--unified-controls { top: 0.3em }
body.hasavatar .tmblr-iframe--unified-controls { right: 3.25em }
/* #endregion */


/* #region Blog header */
#pagehead {
	grid-column: 1 / span 3;
	position: sticky;
	top: 0;
	display: grid;
	grid-template-columns: auto 1fr auto;
	padding: 0.5em 1em 0 0.5em;
	background-color: var(--bg);
	z-index: 1;
}
#pagehead a {
	text-decoration: none;
	color: inherit;
	height: fit-content;
}
#docs, #avatar { grid-row: 1 / span 2 }
#docs svg, #avatar img {
	width: var(--size);
	height: var(--size);
	display: block;
}
#docs svg {
	--size: 3.25em;
	padding: 0.5em;
}
#avatar { grid-column: 3 }
#avatar img {
	--size: 2.5em;
	padding: 0.25em;
	margin-left: 1em;
	margin-top: 0.25em;
}
#avatar:hover img {
	filter: drop-shadow(0 0.0625em rgba(var(--text--rgb), 0.15));
	background-color: rgba(var(--accent--rgb), 0.1);
}
#avatar .square { border-radius: 0.5em }
#avatar .round { border-radius: 100% }
#title h1, #subtitle {
	margin: 0;
	font-weight: 400;
}
#title h1 {
	font-size: 1.125em;
	line-height: 1.375em;
}
#subtitle {
	font-size: 0.875em;
	line-height: normal;
	color: rgba(var(--text--rgb), 0.8);
	text-shadow: 0 0 rgba(var(--accent--rgb), 0.4);
	display: flex;
	flex-flow: row wrap;
	margin-left: -0.4375rem;
	margin-bottom: 0.125em;
}
#subtitle > span, #subtitle a {
	display: flex;
	align-items: center;
	letter-spacing: 0.0125rem;
	padding: 0.125rem 0.4375rem;
	border-radius: 0.25rem;
	height: unset;
}
#subtitle > span:hover, #subtitle a:hover { background-color: rgba(var(--text--rgb), 0.05) }
#subtitle .tag, #subtitle .search_query { margin-inline: 0.2em }
#subtitle .tag::before { content: "#" }
#subtitle .search_query::before { content: "\201C" }
#subtitle .search_query::after { content: "\201D" }
/* #endregion */


/* #region Blog navigation */
#blognav {
	margin-top: 0.375em;
	margin-inline-start: 0.5em;
	grid-column: 1 / span 3;
	display: flex;
	flex-flow: row wrap;
	gap: 0.1875em;
	align-items: center;
	border-radius: 1.1875em;
	background-color: rgba(var(--accent--rgb), 0.05);
	color: rgba(var(--text--rgb), 0.8);
	padding: 0.3125em 0.75em;
}
#blognav .left, #blognav .right {
	display: flex;
	flex-flow: row wrap;
	align-items: center;
}
#blognav .left {
	justify-content: space-evenly;
	row-gap: inherit;
}
#blognav button, #blognav a {
	background: unset;
	border: unset;
	padding: unset;
	margin: unset;
	text-decoration: none;
	color: inherit;
	width: 1.75em;
	height: 1.75em;
	display: flex;
	align-items: center;
	justify-content: center;
	border-radius: 0.25em;
}
#blognav .material-symbols-outlined { font-size: 1.25em }
#blognav a:not([href]) {
	color: rgba(var(--text--rgb), 0.25);
	text-shadow: 0 0 rgba(var(--accent--rgb), 0.1);
}
#blognav button:hover, #blognav a[href]:hover,
#blognav .right > span:hover {
	background-color: rgba(var(--text--rgb), 0.05);
}
#blognav hr {
	height: 1.25em;
	border: 0;
	border-inline-start: 0.0125em solid rgba(var(--text--rgb), 0.22);
	margin: 0 0.1875em;
}
/* #region Search form */
#search:not([data-collapsed]) {
	background-color: var(--post-bg);
	display: flex;
	gap: 0.2em;
	border-radius: 0.25em;
	padding-inline-end: 0.25em;
	margin-inline-end: 0.1875em;
}
#search #togglesearch {
	width: 2.1875em;
	flex-shrink: 0;
}
#search:not([data-collapsed]) #togglesearch {
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
}
#search[data-collapsed] #q { display: none }
#q {
	background: none;
	color: inherit;
	border: none;
	min-width: 0px;
	width: 100%;
}
/* #endregion */
/* #region Right side */
#blognav .right {
	flex-grow: 1;
	justify-content: end;
}
#blognav .right > span {
	height: 1.75em;
	display: flex;
	align-items: center;
	justify-content: center;
	border-radius: 1em;
	padding-inline: 0.5em;
	margin-inline-end: 0.4375em;
	gap: 0.5em;
}
/* #endregion */
/* #endregion */


/* #region Blog sidebar */
#left {
	position: sticky;
	top: 7em;
	height: fit-content;
	max-width: 17em;
	padding-inline: 1.5em 0.5em;
	padding-top: 3em;
	transition: transform .3s;
}
#left[data-collapsed=true] {
	transform: translateX(-100%);
}
#showleft, #hideleft {
	position: absolute;
	top: 0;
	--left: 0.9em;
	left: var(--left);
	background: none;
	border: none;
	padding: 0;
	margin: 0;
	--size: 2.5em;
	height: var(--size);
	width: var(--size);
	border-radius: 100%;
}
#showleft:hover, #hideleft:hover { background-color: rgba(var(--text--rgb), 0.06) }
#showleft {
	left: 0;
	transform: translateX(-100%);
	transition-duration: inherit;
	transition-property: left, transform;
}
#left[data-collapsed=true] #showleft {
	left: calc(100% + var(--left));
	transform: translateX(0%);
}
#left h2 {
	margin: 0;
	font-size: 0.6875em;
	font-weight: 500;
	color: rgba(var(--text--rgb), 0.6);
	text-shadow: 0 0 rgba(var(--accent--rgb), 0.1);
	letter-spacing: 0.00625rem;
	height: 2.25rem;
	display: flex;
	align-items: center;
}
#desc .content {
	font-size: 0.875em;
	padding: 0.5rem;
	margin-inline-start: -0.5rem;
	border: 0.125rem solid transparent;
	color: rgba(var(--text--rgb), 0.73);
	line-height: 1.25rem;
	letter-spacing: 0.0125rem;
}
#pages {
	display: flex;
	flex-direction: column;
	margin-left: -1.5em;
}
#pages h2 { margin-left: 1.5rem }
#pages a {
	text-decoration: none;
	color: rgba(var(--text--rgb), 0.73);
	font-size: 0.875em;
	letter-spacing: 0.015625rem;
	font-weight: 500;
	line-height: 2rem;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	padding-left: 1.5rem;
}
#pages a:hover { color: rgba(var(--text--rgb), 0.9) }
/* ... */

